--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.fragment:fragment:1.0.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
