--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.1.0-alpha03"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // googleStuff
@@ -42,7 +44,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.fragment:fragment:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
@@ -53,15 +56,11 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
 
     // picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
-
-    // RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // dagger2
     implementation "com.google.dagger:dagger:2.19"
@@ -69,6 +68,6 @@ dependencies {
     compileOnly 'org.glassfish:javax.annotation:10.0-b28'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    //androidTestImplementation 'androidx.test:runner:1.1.0'
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
