--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 
@@ -34,14 +34,14 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.1.0-alpha03"
+    def lifecycle_version = "2.2.0-alpha03"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // googleStuff
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.fragment:fragment:1.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
