--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // navigation
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02"
+    implementation "androidx.navigation:navigation-ui-ktx:2.2.0-alpha02"
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
