--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.datikaa.themoviedbapp"
         minSdkVersion 26
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -47,35 +47,24 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // googleStuff
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha03'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha04"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha04"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.21"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02"
-    implementation "androidx.navigation:navigation-ui-ktx:2.2.0-alpha02"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
 
     // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.6.1'
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
-    // picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
-    // dagger2
-    implementation "com.google.dagger:dagger:2.19"
-    kapt "com.google.dagger:dagger-compiler:2.19"
-    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
-
-    testImplementation 'junit:junit:4.12'
-    //androidTestImplementation 'androidx.test:runner:1.1.0'
-    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation "io.coil-kt:coil:1.1.1"
 }
