--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.3.50"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha07'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.4.21"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.3"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
