--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,17 @@ buildscript {
         google()
         jcenter()
     }
+
+    ext.hilt_version = '2.32-alpha'
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0-alpha07'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.4.21"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.3"
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
