--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,14 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+        useIR = true
     }
+
+    composeOptions {
+        kotlinCompilerVersion '1.4.30'
+        kotlinCompilerExtensionVersion '1.0.0-alpha11'
+    }
+
 }
 
 dependencies {
@@ -51,7 +58,6 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     // googleStuff
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.21"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -68,10 +74,24 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     implementation("com.squareup.moshi:moshi:1.11.0")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.11.0")
 
-
+    // image loading
     implementation "io.coil-kt:coil:1.1.1"
+
+    // compose
+    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta01'
+    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
+    implementation 'androidx.compose.material:material:1.0.0-beta01'
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta01'
+
+    debugImplementation "androidx.compose.ui:ui-tooling:1.0.0-beta01"
+    debugImplementation "org.jetbrains.kotlin:kotlin-reflect:1.4.30"
+
 }
