--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'dagger.hilt.android.plugin'
 
@@ -43,9 +42,13 @@ android {
         useIR = true
     }
 
+    buildFeatures {
+        compose true
+    }
+
     composeOptions {
         kotlinCompilerVersion '1.4.30'
-        kotlinCompilerExtensionVersion '1.0.0-alpha11'
+        kotlinCompilerExtensionVersion '1.0.0-beta01'
     }
 
 }
@@ -55,6 +58,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation "androidx.hilt:hilt-navigation:1.0.0-alpha03"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     // googleStuff
@@ -62,6 +66,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation "androidx.activity:activity-ktx:1.3.0-alpha03"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
 
@@ -70,6 +75,7 @@ dependencies {
     // navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -83,15 +89,24 @@ dependencies {
 
     // compose
     implementation 'androidx.compose.ui:ui:1.0.0-beta01'
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta01'
+    implementation "androidx.compose.compiler:compiler:1.0.0-beta01"
     implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
     implementation 'androidx.compose.material:material:1.0.0-beta01'
     implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
     implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta01'
 
     debugImplementation "androidx.compose.ui:ui-tooling:1.0.0-beta01"
     debugImplementation "org.jetbrains.kotlin:kotlin-reflect:1.4.30"
 
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.0"
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies"]
+    }
 }
