--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,25 +57,25 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation "androidx.hilt:hilt-navigation:1.0.0-alpha03"
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation "com.google.dagger:hilt-android:2.37"
+    implementation 'androidx.hilt:hilt-navigation:1.0.0'
+    kapt "com.google.dagger:hilt-compiler:2.37"
 
     // googleStuff
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
-    implementation "androidx.activity:activity-ktx:1.3.0-alpha03"
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
+    implementation 'androidx.activity:activity-ktx:1.3.0-rc02'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-compose:2.4.0-alpha04'
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -88,17 +88,16 @@ dependencies {
     implementation "io.coil-kt:coil:1.1.1"
 
     // compose
-    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
-    implementation "androidx.compose.compiler:compiler:1.0.0-beta01"
-    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
-    implementation 'androidx.compose.material:material:1.0.0-beta01'
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta01'
+    implementation 'androidx.compose.ui:ui:1.0.0-rc02'
+    implementation 'androidx.compose.compiler:compiler:1.0.0-rc02'
+    implementation 'androidx.compose.foundation:foundation:1.0.0-rc02'
+    implementation 'androidx.compose.material:material:1.0.0-rc02'
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-rc02'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.0-rc02'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-rc02'
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08'
 
-    debugImplementation "androidx.compose.ui:ui-tooling:1.0.0-beta01"
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.0.0-rc02'
     debugImplementation "org.jetbrains.kotlin:kotlin-reflect:1.4.30"
 
     implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.0"
