--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,29 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'androidx.navigation.safeargs'
-apply plugin: 'dagger.hilt.android.plugin'
+//apply plugin: 'com.android.application'
+//apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-kapt'
+//apply plugin: 'androidx.navigation.safeargs'
+//apply plugin: 'dagger.hilt.android.plugin'
+
+plugins {
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.kotlin.ksp)
+    alias(libs.plugins.kotlin.parcelize)
+}
+
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
+
     defaultConfig {
         applicationId "com.datikaa.themoviedbapp"
         minSdkVersion 27
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -33,13 +43,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-
     kotlinOptions {
-        jvmTarget = "1.8"
-        useIR = true
+        jvmTarget = '11'
     }
 
     buildFeatures {
@@ -47,8 +55,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerVersion '1.4.30'
-        kotlinCompilerExtensionVersion '1.0.0-beta01'
+        kotlinCompilerExtensionVersion '1.3.0-rc02'
     }
 
 }
@@ -57,57 +64,24 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation "androidx.hilt:hilt-navigation:1.0.0-alpha03"
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation(libs.koin)
+    implementation(libs.coil)
+    implementation(libs.moshi)
 
-    // googleStuff
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
-    implementation "androidx.activity:activity-ktx:1.3.0-alpha03"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+    ksp(libs.moshi.codegen)
 
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation(libs.androidx.core)
+    implementation(libs.androidx.activity)
+    implementation(libs.androidx.appcompat)
 
-    // navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+    implementation(libs.lifecycle.viewmodel.compose)
 
-    // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
-    implementation("com.squareup.moshi:moshi:1.11.0")
-    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.11.0")
+    implementation(libs.constraintlayout)
+    implementation(libs.activity.ktx)
+    implementation(libs.activity.compose)
+    implementation(libs.lifecycle.viewmodel.extensions)
+    implementation(libs.lifecycle.viewmodel.ktx)
 
-    // image loading
-    implementation "io.coil-kt:coil:1.1.1"
-
-    // compose
-    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
-    implementation "androidx.compose.compiler:compiler:1.0.0-beta01"
-    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
-    implementation 'androidx.compose.material:material:1.0.0-beta01'
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta01'
-
-    debugImplementation "androidx.compose.ui:ui-tooling:1.0.0-beta01"
-    debugImplementation "org.jetbrains.kotlin:kotlin-reflect:1.4.30"
-
-    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.0"
-    implementation "dev.chrisbanes.accompanist:accompanist-insets:0.6.0"
-}
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = "1.8"
-        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies"]
-    }
+    implementation(libs.bundles.compose)
+    implementation(libs.bundles.retrofit)
 }
