--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
-    repositories {
-        google()
-        jcenter()
-    }
+plugins {
 
-    ext.hilt_version = '2.32-alpha'
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.4.30"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.3"
-
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
 }
 
 task clean(type: Delete) {
