--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ androidx-activity = "1.5.1"
 androidx-fragment = "1.5.1"
 androiddesugarlibs = "1.1.5"
 
-lifecycle = "2.6.0-alpha01"
+lifecycle = "2.5.1"
 
 #Screenshot testing
 paparazzi = "1.0.0"
@@ -48,9 +48,8 @@ constraintlayout = "androidx.constraintlayout:constraintlayout:2.1.0-alpha2"
 activity-ktx = "androidx.activity:activity-ktx:1.3.0-alpha03"
 
 # Lifecycle
-lifecycle-viewmodel-extensions = { module =  "androidx.lifecycle:lifecycle-extensions", version.ref = "lifecycle" }
-lifecycle-viewmodel-ktx = { module =  "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
-lifecycle-runtime-compose = { module =  "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
+lifecycle-viewmodel-ktx = { module =  "androidx.lifecycle:lifecycle-viewmodel-ktx", version = "2.6.0-alpha01" }
+lifecycle-runtime-compose = { module =  "androidx.lifecycle:lifecycle-runtime-compose", version = "2.6.0-alpha01" }
 
 #Compose
 compose-material3 = { module = "androidx.compose.material3:material3", version = "1.0.0-alpha15" }
