--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [versions]
-android-plugin = "7.2.2"
+android-plugin = "7.3.0"
 kotlin = "1.7.10"
-#room = "2.4.2"
-compose = "1.1.1"
+compose = "1.2.1"
+compose-compiler = "1.3.0"
+compose-material3 = "1.0.0-beta03"
 kotlin-ksp = "1.7.10-1.0.6"
 
 # KotlinX
@@ -52,12 +53,12 @@ lifecycle-viewmodel-ktx = { module =  "androidx.lifecycle:lifecycle-viewmodel-kt
 lifecycle-runtime-compose = { module =  "androidx.lifecycle:lifecycle-runtime-compose", version = "2.6.0-alpha01" }
 
 #Compose
-compose-material3 = { module = "androidx.compose.material3:material3", version = "1.0.0-alpha15" }
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 compose-animation = { module = "androidx.compose.animation:animation", version.ref = "compose" }
 compose-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 compose-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose" }
+compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
 compose-constraintlayout = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.1" }
 compose-ui-test = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
