--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@ org.gradle.jvmargs=-Xmx1536m
 kotlin.code.style=official
 android.useAndroidX=true
 android.enableJetifier=false
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
