--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,53 +5,33 @@ compose = "1.2.1"
 compose-compiler = "1.3.0"
 compose-material3 = "1.0.0-beta03"
 kotlin-ksp = "1.7.10-1.0.6"
-
 # KotlinX
 coroutines = "1.6.4"
-
 # Core
 koin = "3.2.0"
 androidx-core = "1.8.0"
 androidx-appcompat = "1.4.2"
 androidx-activity = "1.5.1"
-androidx-fragment = "1.5.1"
-androiddesugarlibs = "1.1.5"
-
-lifecycle = "2.5.1"
-
 #Screenshot testing
 paparazzi = "1.0.0"
-
 #Retrofit
 retrofit = "2.9.0"
-
-[plugins]
-android-application = { id = "com.android.application", version.ref = "android-plugin" }
-android-library = { id = "com.android.library", version.ref = "android-plugin" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlin-ksp" }
-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
-paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
+com-squareup-moshi = "1.13.0"
 
 [libraries]
-
 # KotlinX
-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
-
+coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 # Core
-androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
-androidx-activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "androidx-activity" }
-
+androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
+androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
 # Android-View
 constraintlayout = "androidx.constraintlayout:constraintlayout:2.1.0-alpha2"
 activity-ktx = "androidx.activity:activity-ktx:1.3.0-alpha03"
-
 # Lifecycle
-lifecycle-viewmodel-ktx = { module =  "androidx.lifecycle:lifecycle-viewmodel-ktx", version = "2.6.0-alpha01" }
-lifecycle-runtime-compose = { module =  "androidx.lifecycle:lifecycle-runtime-compose", version = "2.6.0-alpha01" }
-
+lifecycle-viewmodel-ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha01"
+lifecycle-runtime-compose = "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha01"
 #Compose
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 compose-animation = { module = "androidx.compose.animation:animation", version.ref = "compose" }
@@ -60,37 +40,32 @@ compose-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", v
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-compose-constraintlayout = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.1" }
+compose-constraintlayout = "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 compose-ui-test = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
-
 activity-compose = "androidx.activity:activity-compose:1.5.1"
 lifecycle-viewmodel-compose = "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
-
 #Koin
-koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
-
+koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 #Retrofit
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 retrofit-logging-interceptor = "com.squareup.okhttp3:logging-interceptor:4.9.0"
-
 #Moshi
-moshi = "com.squareup.moshi:moshi:1.13.0"
-moshi-codegen = "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
-
+moshi = { module = "com.squareup.moshi:moshi", version.ref = "com-squareup-moshi" }
+moshi-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "com-squareup-moshi" }
 #Coil
-coil =  { module = "io.coil-kt:coil-compose", version = "2.1.0" }
+coil = "io.coil-kt:coil-compose:2.1.0"
 
 [bundles]
 compose = [
-    "compose-material3",
     "compose-animation",
+    "compose-compiler",
+    "compose-constraintlayout",
+    "compose-foundation",
+    "compose-material3",
     "compose-tooling",
     "compose-ui",
-    "compose-compiler",
-    "compose-foundation",
-    "compose-constraintlayout",
     "compose-ui-test",
     "compose-ui-test-manifest",
 ]
@@ -99,3 +74,13 @@ retrofit = [
     "retrofit-converter-moshi",
     "retrofit-logging-interceptor",
 ]
+
+[plugins]
+android-application = { id = "com.android.application", version.ref = "android-plugin" }
+android-library = { id = "com.android.library", version.ref = "android-plugin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlin-ksp" }
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
+gradle-versions = "com.github.ben-manes.versions:0.41.0"
+gradle-catalog-updater = "nl.littlerobots.version-catalog-update:0.6.1"
